--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,9 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.2",
+    "@types/leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
+    "@types/leaflet-draw": "^1.0.7",
     "leaflet.locatecontrol": "^0.76.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.4",
