--- a/client/angular.json
+++ b/client/angular.json
@@ -112,6 +112,8 @@
               "node_modules/@mapbox/leaflet-omnivore/leaflet-omnivore.min.js"
             ],
             "styles": [
+              "./node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/leaflet-draw/dist/leaflet.draw.css",
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ]
