--- a/client/package.json
+++ b/client/package.json
@@ -40,8 +40,7 @@
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.2",
     "@types/leaflet": "^1.9.3",
-    "leaflet-draw": "^1.0.4",
-    "@types/leaflet-draw": "^1.0.7",
+    "@geoman-io/leaflet-geoman-free": "^2.14.2",
     "leaflet.locatecontrol": "^0.76.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.4",
