add selectable regions

--- a/client/angular.json
+++ b/client/angular.json
@@ -27,7 +27,19 @@
               "robust-point-in-polygon",
               "robust-orientation",
               "leaflet",
-              "moment"
+              "moment",
+              "geojson-equality",
+              "turf-jsts",
+              "skmeans",
+              "rbush",
+              "polygon-clipping",
+              "object-assign",
+              "deep-equal",
+              "density-clustering",
+              "eojson-rbush",
+              "concaveman",
+              "geojson-rbush",
+              "earcut"
             ],
             "aot": true,
             "outputPath": "dist",
